8255691: Shenandoah: Invoke native-LRB only on non-strong refs